<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Registro.ActivityRegistro">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ExtraText">
        <EditText
            android:id="@+id/editNombre"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Nombre"
            android:text=""
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/editApellidos"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Apellidos"
            android:text=""
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/editUsuario"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Usuario"
            android:text=""
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/editMail"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Mail"
            android:text=""
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/editTextContraseña"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Contrasena"
            android:inputType="textPassword"
            android:text=""
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/editTextContraseñaRepetir"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/RepContra"
            android:inputType="textPassword"
            android:text=""
            tools:ignore="MissingConstraints" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ExtraText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Genero"
            android:ems="4"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Masculino" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Femenino" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NBinario" />
            />

    </LinearLayout>
        <Spinner
            android:id="@+id/spinnerNacionalidad"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:entries="@array/nacionalidad"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/conversor1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintVertical_bias="0.471"
            tools:ignore="MissingConstraints" />
        <Spinner
            android:id="@+id/spinnerFabricante"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:entries="@array/fabricante"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/conversor1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintVertical_bias="0.471"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="80dp"
            android:text="@string/Enviar"
            android:backgroundTint="@color/gris"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/buttonCuenta"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="230dp"
            android:text="@string/YCuenta"
            android:backgroundTint="@color/gris"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>