<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuario.ColeccionesAnadirCoche">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20109439" />

    <ImageView
        android:id="@+id/back_btn5"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/baseline_chevron_left_242"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="@dimen/_115sdp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ExtraText">
    <ImageView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_220sdp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_launcher_background"
        />
        <TextView
            android:id="@+id/nombreCoche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="4"
            android:text="@string/Nombre"
            android:textColor="@color/azul"
            android:padding="6dp"
            android:textSize="14dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/nombreDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="4"
            android:text="@string/Descripcion"
            android:textColor="@color/azul"
            android:padding="6dp"
            android:textSize="14dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/nombreCaracteristicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="4"
            android:text="@string/Caracteristicas"
            android:textColor="@color/azul"
            android:padding="6dp"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/tickAñadir"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_85sdp"
            android:src="@drawable/baseline_check_24"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>